# daedalus

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: README.md
.claude-plugin/agents/: icarus.md
example/: POST_MORTEM.md
seed/: identity.md
src/daedalus/: __init__.py  config.py
src/daedalus/ariadne/: __init__.py  conflict_detector.py  diff_bus.py  dispatcher.py  orchestrator.py  planner.py  tracker.py  verification.py
src/daedalus/bus/: __init__.py  icarus_bus.py  null_bus.py  permissions.py
src/daedalus/cli/: __init__.py  commands.py  main.py
src/daedalus/identity/data/: __init__.py  identity.json
src/daedalus/identity/data/agents/: __init__.py
src/daedalus/labyrinth/: __init__.py  cartographer.py  causal_slice.py  icarus_integration.py  link_generator.py  orphan_detector.py  pathfinding.py  work_packages.py
src/daedalus/plugin/: __init__.py  plugin.yaml
src/daedalus/plugin/agents/: theseus.md
src/daedalus/plugin/commands/: ariadne.md  theseus.md
src/daedalus/plugin/skills/ariadne/: SKILL.md
src/daedalus/plugin/templates/: CLAUDE_TEMPLATE.md
src/daedalus/templates/: injector.py
src/daedalus/tools/: __init__.py
src/daedalus/tui/: __init__.py  app.py  pty_manager.py  styles.css
src/daedalus/tui/widgets/: __init__.py  daedalus_terminal.py  lazygit_terminal.py  status_bar.py  swarm_grid.py  terminal.py  tmux_terminal.py  worker_panel.py
src/daedalus/worker/: __init__.py  __main__.py  harness.py
