[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daedalus"
version = "0.1.0"
description = "Claude Code plugin with Mind Palace (Labyrinth) navigation and Icarus parallel workers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Daedalus", email = "daedalus@cass-vessel.local"}
]
keywords = ["claude", "labyrinth", "mind-palace", "icarus", "parallelization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
sdk = ["claude-agent-sdk>=0.1.0"]

[project.scripts]
icarus-worker = "daedalus.worker.harness:main"
context-estimator = "daedalus.tools.context_estimator:main"

[project.urls]
Homepage = "https://github.com/KohlJary/daedalus"
Repository = "https://github.com/KohlJary/daedalus"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
daedalus = [
    "identity/data/*.md",
    "identity/data/*.json",
    "labyrinth/*.py",
]
